change some files and add docs.

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,13 +1,15 @@
 [metadata]
+with open(path.join(here, 'README.md'), encoding='utf-8') as f:
+    long_description = f.read()
 description-file = README.md
 name = 'spotifyscraper'
-version = '1.0.0'
-description = 'A sample Python project'
+version = '1.0.1'
+description = 'Spotify Web Player Scraper using python, scrape and download song and cover from Spotify.'
 long_description = long_description
 long_description_content_type = 'text/markdown'
-url = 'https://github.com/pypa/sampleproject'
-author = 'The Python Packaging Authority'
-author_email = 'pypa-dev@googlegroups.com'
+url = 'https://github.com/AliAkhtari78/SpotifyScraper'
+author = 'Ali Akhtari'
+author_email = 'aliakhtari78@hotmail.com'
 classifiers =
     'Development Status :: 5 - Production/Stable
 
