--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,14 @@ python:
   - "3.8"
   - "3.8-dev"
   - "nightly"
+virtualenv:
+  system_site_packages: true
+before_install:
+  - python --version
+  - pip install -U pip
+  - pip install -U spotifyscraper
 install:
   - pip install -r requirements.txt
   - pip install -U tox
 script:
-  - tox -e py36
+  - tox
