change travis conf

--- a/tox.ini
+++ b/tox.ini
@@ -11,11 +11,7 @@
 [tox]
 envlist =
     py36,py37,py38
-
-
-###########################
-# Relay Flasher Tests
-###########################
+minversion = 3.6
 
 [testenv]
 deps =
