change travis conf

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,6 @@ python:
 install:
   - pip install -r requirements.txt
   - pip install -U tox
+  - pip install -U pytest
 script:
-  - tox
+  - pytest
