--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,5 @@ python:
 install:
   - pip install -r requirements.txt
   - pip install -U tox
-  - pip install -U pytest
 script:
-  - pytest
+  - tox
