--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,16 @@ python:
 install:
   - pip install -r requirements.txt
   - pip install -U tox
-script:
-  - tox
+script:tox
+matrix:
+  fast_finish: true
+  include:
+
+    - python: "3.6"
+      env: TOXENV=py36
+
+    - python: "3.7"
+      env: TOXENV=py37
+
+    - python: "3.8"
+      env: TOXENV=py38
