--- a/.travis.yml
+++ b/.travis.yml
@@ -5,13 +5,9 @@ python:
   - "3.8"
   - "3.8-dev"
   - "nightly"
-before_install:
-  - python --version
-  - pip install -U pip
-  - pip3 install virtualenv
-  - virtualenv -p python3 ~/venv
-  - source ~/venv/bin/activate
 install:
   - pip install -r requirements.txt
   - pip install -U tox
-script:tox
+
+script:
+  - tox
