--- a/.gitignore
+++ b/.gitignore
@@ -209,3 +209,6 @@ fabric.properties
 
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
+
+
+SpotifyScraper/temo.py
