Start refactoring entire code base.

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,21 +1,57 @@
 [metadata]
-with open(path.join(here, 'README.md'), encoding='utf-8') as f:
-    long_description = f.read()
-description-file = README.md
-name = 'spotifyscraper'
-version = '1.0.5'
-description = 'Spotify Web Player Scraper using python, scrape and download song and cover from Spotify.'
-long_description = long_description
-long_description_content_type = 'text/markdown'
-url = 'https://github.com/AliAkhtari78/SpotifyScraper'
-author = 'Ali Akhtari'
-author_email = 'aliakhtari78@hotmail.com'
+name = spotifyscraper
+description = Spotify Web Player Scraper using Python - extract data and download content from Spotify
+author = Ali Akhtari
+author_email = aliakhtari78@hotmail.com
+license = MIT
+license_files = LICENSE
+long_description = file: README.md
+long_description_content_type = text/markdown
+url = https://github.com/AliAkhtari78/SpotifyScraper
+project_urls =
+    Bug Tracker = https://github.com/AliAkhtari78/SpotifyScraper/issues
+    Documentation = https://spotifyscraper.readthedocs.io/
 classifiers =
-    'Development Status :: 5 - Production/Stable
+    Development Status :: 5 - Production/Stable
+    Intended Audience :: Developers
+    License :: OSI Approved :: MIT License
+    Programming Language :: Python :: 3
+    Programming Language :: Python :: 3.8
+    Programming Language :: Python :: 3.9
+    Programming Language :: Python :: 3.10
+    Programming Language :: Python :: 3.11
+    Topic :: Software Development :: Libraries :: Python Modules
 
-    'Intended Audience :: Developers'
-    'Topic :: Software Development :: Build Tools'
+[options]
+package_dir =
+    = src
+packages = find:
+python_requires = >=3.8
+install_requires =
+    requests>=2.25.0
+    beautifulsoup4>=4.9.0
+    lxml>=4.9.0
+    pyyaml>=6.0
+    eyeD3>=0.9.5
 
-    'Programming Language :: Python :: 3.6'
-    'Programming Language :: Python :: 3.7'
-    'Programming Language :: Python :: 3.8'
+[options.packages.find]
+where = src
+
+[options.extras_require]
+selenium =
+    selenium>=4.0.0
+dev =
+    pytest>=7.0.0
+    pytest-cov>=4.0.0
+    black>=23.0.0
+    isort>=5.0.0
+    mypy>=1.0.0
+    pylint>=2.0.0
+docs =
+    sphinx>=5.0.0
+    sphinx-rtd-theme>=1.0.0
+
+[flake8]
+max-line-length = 100
+exclude = .git,__pycache__,build,dist,venv,.venv
+ignore = E203, W503  # Black compatibility
