--- a/requirements.txt
+++ b/requirements.txt
@@ -11,10 +11,12 @@ filetype==1.0.6
 idna==2.9
 lxml==4.5.0
 packaging==20.3
-parse==1.15.0
+
+parse
+pyppeteer
+
 pyee==7.0.1
 pyparsing==2.4.7
-pyppeteer==0.0.25
 pyquery==1.4.1
 PyYAML==5.3.1
 requests==2.23.0
