--- a/.github/workflows/copilot-setup-steps.yml
+++ b/.github/workflows/copilot-setup-steps.yml
@@ -45,7 +45,8 @@ jobs:
 
       - name: Install system dependencies
         run: |
-          sudo apt-get update
+          sudo apt-get update -y
+          sudo apt-get full-upgrade -y
           sudo apt-get install -y \
             libxml2-dev \
             libxslt1-dev \
