--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -55,8 +55,8 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -e ".[dev]"
-        pip install sphinx sphinx-rtd-theme sphinx-autodoc-typehints myst-parser
-        pip install sphinxcontrib-napoleon sphinxcontrib-programoutput
+        pip install -r docs/requirements.txt
+        pip install sphinx-autodoc-typehints sphinxcontrib-napoleon sphinxcontrib-programoutput
     
     - name: Build documentation
       run: |
