fix: remove comment from flake8 ignore line in setup.cfg
- Remove inline comment that was causing flake8 parsing error
- Flake8 was trying to parse '#' as an error code

--- a/setup.cfg
+++ b/setup.cfg
@@ -54,4 +54,4 @@ docs =
 [flake8]
 max-line-length = 100
 exclude = .git,__pycache__,build,dist,venv,.venv
-ignore = E203, W503  # Black compatibility
+ignore = E203, W503
