fix: resolve GitHub Pages and CI workflow failures
- Remove package_build_env from git tracking (virtual environment)
- Add package_build_env to .gitignore to prevent Jekyll build errors
- Configure flake8 to ignore non-critical test file issues (E402, E501, F841)
  - E402: Module level import not at top of file (common in tests)
  - E501: Line too long (acceptable in test descriptions)
  - F841: Local variable assigned but never used (common in exception testing)

This fixes the two remaining workflow failures:
1. pages-build-deployment - Jekyll couldn't resolve lib64 symlink
2. CI workflow - Test file linting issues are now ignored

--- a/.gitignore
+++ b/.gitignore
@@ -216,3 +216,6 @@ SpotifyScraper/temo.py
 # Test files
 test_real_functionality.py
 test_environment/
+
+# Virtual environments
+package_build_env/
