--- a/setup.cfg
+++ b/setup.cfg
@@ -53,5 +53,7 @@ docs =
 
 [flake8]
 max-line-length = 100
-exclude = .git,__pycache__,build,dist,venv,.venv
+exclude = .git,__pycache__,build,dist,venv,.venv,package_build_env
 ignore = E203, W503
+per-file-ignores =
+    tests/*:E402,E501,F841
