fix: resolve additional workflow syntax errors
- Fix CI workflow line 49 where two steps were on same line
- Fix release workflow line 50 where two steps were on same line
- Properly format YAML structure in affected workflows

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,7 +46,9 @@ jobs:
       run: flake8 src/ tests/
     
     - name: Run Pylint
-      run: pylint src/    - name: Run MyPy
+      run: pylint src/
+    
+    - name: Run MyPy
       run: mypy src/ --ignore-missing-imports
     
     - name: Run Bandit Security Scan
