fix: resolve remaining workflow YAML syntax errors
- Fix CI workflow job section formatting
- Fix Docker workflow image list formatting
- Fix dependencies workflow commit message formatting
- Fix main workflow job reference formatting
- Fix security workflow step separation
- Fix release workflow step formatting
- Ensure all YAML structures are properly formatted

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -148,7 +148,9 @@ jobs:
         SPOTIFY_TEST_TRACK_ID: ${{ secrets.SPOTIFY_TEST_TRACK_ID }}
         SPOTIFY_TEST_ALBUM_ID: ${{ secrets.SPOTIFY_TEST_ALBUM_ID }}
         SPOTIFY_TEST_ARTIST_ID: ${{ secrets.SPOTIFY_TEST_ARTIST_ID }}
-        SPOTIFY_TEST_PLAYLIST_ID: ${{ secrets.SPOTIFY_TEST_PLAYLIST_ID }}  build-dist:
+        SPOTIFY_TEST_PLAYLIST_ID: ${{ secrets.SPOTIFY_TEST_PLAYLIST_ID }}
+  
+  build-dist:
     name: Build Distribution
     runs-on: ubuntu-latest
     needs: [lint, test]
