--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -47,7 +47,8 @@ jobs:
       id: meta
       uses: docker/metadata-action@v5
       with:
-        images: |          ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+        images: |
+          ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           ${{ secrets.DOCKERHUB_USERNAME }}/spotifyscraper
         tags: |
           type=ref,event=branch
