--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -94,7 +94,9 @@ jobs:
         scan-type: 'fs'
         scan-ref: '.'
         format: 'sarif'
-        output: 'trivy-results.sarif'    - name: Upload Trivy scan results to GitHub Security tab
+        output: 'trivy-results.sarif'
+    
+    - name: Upload Trivy scan results to GitHub Security tab
       uses: github/codeql-action/upload-sarif@v3
       with:
         sarif_file: 'trivy-results.sarif'
