fix: make workflows reusable and fix remaining syntax errors
- Add workflow_call trigger to CI, docs, and security workflows
- Fix CI workflow missing newline after pip install command
- Enable workflows to be called from main workflow
- Ensure all workflow syntax is valid

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,7 @@ on:
   pull_request:
     branches: [ main, master, develop ]
   workflow_dispatch:
+  workflow_call:
 
 env:
   PYTHON_VERSION: "3.11"
@@ -97,7 +98,9 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install pytest pytest-cov pytest-xdist pytest-timeout
-        pip install -e ".[dev]"    - name: Run tests with coverage
+        pip install -e ".[dev]"
+    
+    - name: Run tests with coverage
       run: |
         pytest tests/ -v -n auto --cov=src/spotify_scraper --cov-report=xml --cov-report=html --cov-report=term
     
