--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -37,7 +37,7 @@ jobs:
         password: ${{ secrets.GITHUB_TOKEN }}
     
     - name: Log in to Docker Hub
-      if: github.event_name != 'pull_request'
+      if: github.event_name != 'pull_request' && secrets.DOCKERHUB_USERNAME != ''
       uses: docker/login-action@v3
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
