fix: make Docker Hub login optional with continue-on-error
- Add continue-on-error to Docker Hub login step
- Allow workflow to proceed even without Docker Hub credentials
- Fix workflow syntax issue with secrets reference

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -37,11 +37,12 @@ jobs:
         password: ${{ secrets.GITHUB_TOKEN }}
     
     - name: Log in to Docker Hub
-      if: github.event_name != 'pull_request' && secrets.DOCKERHUB_USERNAME != ''
+      if: github.event_name != 'pull_request'
       uses: docker/login-action@v3
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
+      continue-on-error: true
     
     - name: Extract metadata
       id: meta
