--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -44,8 +44,24 @@ jobs:
         password: ${{ secrets.DOCKERHUB_TOKEN }}
       continue-on-error: true
     
-    - name: Extract metadata
-      id: meta
+    - name: Extract metadata (GitHub only)
+      if: ${{ !secrets.DOCKERHUB_USERNAME }}
+      id: meta-github
+      uses: docker/metadata-action@v5
+      with:
+        images: |
+          ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+        tags: |
+          type=ref,event=branch
+          type=ref,event=pr
+          type=semver,pattern={{version}}
+          type=semver,pattern={{major}}.{{minor}}
+          type=semver,pattern={{major}}
+          type=sha
+    
+    - name: Extract metadata (GitHub + Docker Hub)
+      if: ${{ secrets.DOCKERHUB_USERNAME }}
+      id: meta-both
       uses: docker/metadata-action@v5
       with:
         images: |
@@ -65,8 +81,8 @@ jobs:
         context: .
         platforms: linux/amd64,linux/arm64
         push: ${{ github.event_name != 'pull_request' }}
-        tags: ${{ steps.meta.outputs.tags }}
-        labels: ${{ steps.meta.outputs.labels }}
+        tags: ${{ steps.meta-github.outputs.tags || steps.meta-both.outputs.tags }}
+        labels: ${{ steps.meta-github.outputs.labels || steps.meta-both.outputs.labels }}
         cache-from: type=gha
         cache-to: type=gha,mode=max
     
@@ -74,7 +90,7 @@ jobs:
       if: github.event_name != 'pull_request'
       uses: aquasecurity/trivy-action@master
       with:
-        image-ref: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ steps.meta.outputs.version }}
+        image-ref: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ steps.meta-github.outputs.version || steps.meta-both.outputs.version }}
         format: 'sarif'
         output: 'trivy-docker-results.sarif'
     
