--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -48,7 +48,8 @@ jobs:
     
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip        pip install safety pip-audit
+        python -m pip install --upgrade pip
+        pip install safety pip-audit
         pip install -e .
     
     - name: Run Safety check
