--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -4,25 +4,33 @@
 # Required
 version: 2
 
-# Set the OS, Python version and other tools you might need
+# Set the version of Python and other tools you might need
 build:
   os: ubuntu-22.04
   tools:
     python: "3.11"
+  commands:
+    # Install the package
+    - pip install -e .
+    # Build the documentation
+    - cd docs && make html
 
 # Build documentation in the docs/ directory with Sphinx
 sphinx:
   configuration: docs/conf.py
-  fail_on_warning: true
+  builder: html
+  fail_on_warning: false
 
-# Optionally build your docs in additional formats such as PDF and ePub
+# Build documentation with MkDocs
+#mkdocs:
+#  configuration: mkdocs.yml
+
+# Optionally build your docs in additional formats such as PDF
 formats:
   - pdf
   - epub
 
-# Optional but recommended, declare the Python requirements required
-# to build your documentation
-# See https://docs.readthedocs.io/en/stable/guides/reproducible-builds.html
+# Optionally declare the Python requirements required to build your docs
 python:
   install:
     - requirements: docs/requirements.txt
