--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -146,7 +146,7 @@ jobs:
     
     - name: Run integration tests
       run: |
-        pytest tests/integration/ -v --integration
+        pytest tests/integration/ -v
       env:
         SPOTIFY_TEST_TRACK_ID: ${{ secrets.SPOTIFY_TEST_TRACK_ID }}
         SPOTIFY_TEST_ALBUM_ID: ${{ secrets.SPOTIFY_TEST_ALBUM_ID }}
