docs: Switch from Sphinx to MkDocs for ReadTheDocs
- Create mkdocs.yml with Material theme configuration
- Update .readthedocs.yaml to use MkDocs instead of Sphinx
- Update docs/requirements.txt for MkDocs dependencies
- Add version info (2025) prominently in docs/index.md
- Create custom stylesheet for documentation
- Remove PDF/EPUB formats (not supported by MkDocs)

This will make ReadTheDocs show the 2025 version

--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -12,23 +12,20 @@ build:
   commands:
     # Install the package
     - pip install -e .
-    # Build the documentation
-    - cd docs && make html
 
 # Build documentation in the docs/ directory with Sphinx
-sphinx:
-  configuration: docs/conf.py
-  builder: html
-  fail_on_warning: false
+#sphinx:
+#  configuration: docs/conf.py
+#  builder: html
+#  fail_on_warning: false
 
 # Build documentation with MkDocs
-#mkdocs:
-#  configuration: mkdocs.yml
+mkdocs:
+  configuration: mkdocs.yml
 
 # Optionally build your docs in additional formats such as PDF
-formats:
-  - pdf
-  - epub
+# Note: MkDocs doesn't support PDF/EPUB formats
+formats: []
 
 # Optionally declare the Python requirements required to build your docs
 python:
