--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,5 +1,5 @@
 # Documentation dependencies
-sphinx>=8.0
-sphinx-rtd-theme>=3.0
-recommonmark>=0.7.1
-myst-parser>=4.0.0
+mkdocs>=1.5.0
+mkdocs-material>=9.0.0
+mkdocstrings[python]>=0.24.0
+pymdown-extensions>=10.0
