--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -10,8 +10,11 @@ build:
   tools:
     python: "3.11"
   commands:
-    # Install the package
+    # Install the package and docs dependencies
     - pip install -e .
+    - pip install -r docs/requirements.txt
+    # Build the documentation
+    - mkdocs build --site-dir $READTHEDOCS_OUTPUT/html
 
 # Build documentation in the docs/ directory with Sphinx
 #sphinx:
