fix: Update dependencies workflow with correct pip-upgrade flags
- Add --skip-virtualenv-check flag to pip-upgrade commands
- Add --skip-package-installation flag to prevent installation issues
- This fixes the failing Dependencies workflow

--- a/.github/workflows/dependencies.yml
+++ b/.github/workflows/dependencies.yml
@@ -30,13 +30,13 @@ jobs:
     - name: Update requirements files
       run: |
         # Update main requirements
-        pip-upgrade requirements.txt --skip-package-check
+        pip-upgrade requirements.txt --skip-virtualenv-check --skip-package-installation
         
         # Update dev requirements
-        pip-upgrade requirements-dev.txt --skip-package-check
+        pip-upgrade requirements-dev.txt --skip-virtualenv-check --skip-package-installation
         
         # Update docs requirements
-        pip-upgrade docs/requirements.txt --skip-package-check
+        pip-upgrade docs/requirements.txt --skip-virtualenv-check --skip-package-installation
     
     - name: Check for security issues
       run: |
