fix: Update PyPI publish workflow to use token authentication
- Switch from trusted publishing to token-based authentication
- Add deployment instructions for setting up PYPI_API_TOKEN
- Document both token and trusted publishing options

This change allows immediate deployment once PYPI_API_TOKEN is added to repository secrets.

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -91,20 +91,21 @@ jobs:
         name: python-packages
         path: dist/
     
-    - name: Publish to PyPI
-      uses: pypa/gh-action-pypi-publish@release/v1
-      with:
-        verbose: true
-        print-hash: true
+    # Temporarily use token-based authentication until trusted publishing is configured
+    - name: Publish to PyPI using token
+      env:
+        TWINE_USERNAME: __token__
+        TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
+      run: |
+        pip install twine
+        twine upload --non-interactive --skip-existing dist/*
     
-    # Alternative method using API token (if trusted publishing is not set up)
-    # - name: Publish to PyPI using token
-    #   env:
-    #     TWINE_USERNAME: __token__
-    #     TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
-    #   run: |
-    #     pip install twine
-    #     twine upload --non-interactive --skip-existing dist/*
+    # Alternative: Use trusted publishing (requires PyPI configuration)
+    # - name: Publish to PyPI
+    #   uses: pypa/gh-action-pypi-publish@release/v1
+    #   with:
+    #     verbose: true
+    #     print-hash: true
 
   verify:
     needs: publish
