fix: Clean build artifacts in publish workflow (v2.0.2)
- Added cleanup step to remove all build artifacts before packaging
- Ensures fresh metadata without deprecated fields
- Bumped version to 2.0.2
- Fixed persistent license-file metadata issue in PyPI deployment

This should resolve the InvalidDistribution error during PyPI upload.

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -36,6 +36,10 @@ jobs:
     
     - name: Build distribution packages
       run: |
+        # Clean any existing build artifacts
+        rm -rf build/ dist/ *.egg-info src/*.egg-info
+        find . -type d -name "*.egg-info" -exec rm -rf {} + || true
+        # Build fresh packages
         python -m build
         ls -la dist/
     
