fix: Remove license classifier to resolve PyPI metadata issues (v2.0.2)
- Removed deprecated License :: OSI Approved :: MIT License classifier
- Changed license field format in pyproject.toml from {text = \MIT\} to \MIT\
- This resolves the InvalidDistribution error during PyPI upload
- All tests passing (137 passed, 4 skipped)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,11 +10,10 @@ readme = "README.md"
 authors = [
     {name = "Ali Akhtari", email = "aliakhtari78@hotmail.com"},
 ]
-license = {text = "MIT"}
+license = "MIT"
 classifiers = [
     "Development Status :: 5 - Production/Stable",
     "Intended Audience :: Developers",
-    "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.8",
